# minx

./: .gitignore  CONTRIBUTING.md  README.md  TODO.md  anyio_demo.py  pyproject.toml  server.html
docs/: conf.py  index.md  index.rst  reference.md
minx/: app.py  sphinx_builder.py  watchers.py
src/minx/: __init__.py  app.py  bulk_load_markdown.py  sphinx_builder.py  version.py
tests/: conftest.py  test_minx.py  test_sphinx_builder.py
tests/roots/test-sphinx-setup/: conf.py  doc1.rst  index.rst
