[tool.poetry]
name = "minx"
version = "0.1.0"
description = ""
authors = ["Paul Everitt <pauleveritt@me.com>"]

[tool.poetry.dependencies]
python = "^3.9"
watchgod = "^0.7"
starlette = "^0.17.1"
uvicorn = "^0.16.0"
fastapi = "^0.71.0"
asyncer = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
