[tool.poetry]
name = "minx"
version = "0.1.0"
description = ""
authors = ["Paul Everitt <pauleveritt@me.com>"]

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.19.0"
uvicorn = "^0.16.0"
Sphinx = "^4.5.0"
watchfiles = "^0.11"
myst-parser = "^0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
